--- a/03. Telecom tariffs/03. Tariffs prediction.ipynb
+++ b/03. Telecom tariffs/03. Tariffs prediction.ipynb
@@ -46,8 +46,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "import random"
+    "from sklearn.linear_model import LogisticRegression\n"
    ]
   },
   {
