--- a/11. Toxic comments/11. Toxic comments.ipynb
+++ b/11. Toxic comments/11. Toxic comments.ipynb
@@ -466,17 +466,17 @@
    },
    "outputs": [],
    "source": [
-    "#model_lgbmc = lgb.LGBMClassifier(random_state=42, class_weight='balanced')\n",
+    "model_lgbmc = lgb.LGBMClassifier(random_state=42, class_weight='balanced')\n",
     "\n",
-    "#grid_param = {\n",
-    "#    'max_depth': [30, 20],\n",
-    "#    'num_leaves': [70, 50],\n",
-    "#    'learning_rate': [0.03],\n",
-    "#    'num_boost_round': [700, 800]}\n",
+    "grid_param = {\n",
+    "    'max_depth': [30, 20],\n",
+    "    'num_leaves': [70, 50],\n",
+    "    'learning_rate': [0.03],\n",
+    "    'num_boost_round': [700, 800]}\n",
     "\n",
-    "#grid_search = GridSearchCV(model_lgbmc, grid_param, scoring='f1', n_jobs=-1, cv=3, verbose=10)\n",
-    "#grid_search.fit(features_train, target_train)\n",
-    "#grid_search.best_params_"
+    "grid_search = GridSearchCV(model_lgbmc, grid_param, scoring='f1', n_jobs=-1, cv=3, verbose=10)\n",
+    "grid_search.fit(features_train, target_train)\n",
+    "grid_search.best_params_"
    ]
   },
   {
